<resources>
    <string name="app_name">Farhikhtegan</string>
    <string name="subTitle_1">Licensed by the Technical and Vocational Education Organization</string>
    <string name="subTitle_2">And ICDL Foundation of Iran (affiliated to the Ministry of Education)</string>
    <string name="details">Details</string>
    <string name="depatment_computer">Computer</string>
    <string name="depatment_account">Accunting</string>
    <string name="depatment_kid"> Kid</string>
    <string name="home">Home</string>
    <string name="WeTeachers">My Teachers</string>
    <string name="Language">Language Setting</string>
    <string name="language_fa">Persian</string>
    <string name="language_en">English</string>
    <string name="ok">ok</string>
    <string name="FrequentlyAskedQuestions">Frequently Asked Questions</string>
    <string name="About">About US</string>
    <string-array name="list_Language">
        <item>English</item>
        <item>Farsi</item>
    </string-array>
</resources>