<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/purple_700"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">



            <ImageView
                android:id="@+id/logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="start"
                app:srcCompat="@mipmap/logo" />


            <TextView
                android:textColor="@color/white"
                android:id="@+id/Title_app"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/sytle_Title" />

            <TextView
                android:textColor="@color/white"
                android:id="@+id/subTitle1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subTitle_1"
                style="@style/sytle_txt_Error"/>

            <TextView
                android:textColor="@color/white"
                android:id="@+id/subTitle2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/subTitle_2"
                style="@style/sytle_txt_Error"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>